--- a/flower.html
+++ b/flower.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
-    <title>Kado buat kamu</title>
+    <title>Gift - Benhard</title>
 </head>
 <body class="container">  
     <div class="message-container">
-      <p>Untukmu, seseorang yang istimewa.</p>
+      <p>For Someone Special.</p>
     </div>
     <div class="night"></div>
     <div class="flowers">
