--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span>A</span>
     </div>
     <div class="description">
-        <span>Semangat Ya Jadi Panitia Ospeknya</span>
+        <span>Aku punya sesuatu yang spesial buat kamu</span>
     </div>
     <div class="button">
         <button>
