--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
     <title>Ini kado buat kmuu !! </3></title>
 </head>
-<body class="container">
-    <div class="night"></div>
-    <div class="stars"></div>
-    <div class="twinkling"></div>
-    <div class="clouds"></div>
+<body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
@@ -26,7 +22,7 @@
         <span>A</span>
     </div>
     <div class="description">
-        <span>Aku punya sesuatu yang spesial buat kamu</span>
+        <span>Semangat Ya Jadi Panitia Ospeknya</span>
     </div>
     <div class="button">
         <button>
