--- a/flower.html
+++ b/flower.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">  
     <div class="message-container">
-      <p>For Someone Special.</p>
+      <p>For U <3.</p>
     </div>
     <div class="night"></div>
     <div class="flowers">
