--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click Heree!</a>
+            <a href="flower.html">Click Heree ♥ !</a>
         </button>
         
     </div>
