--- a/flower.html
+++ b/flower.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">  
     <div class="message-container">
-      <p>everything u are :b </p>
+      <p>nii buat kamuu :b </p>
     </div>
     <div class="night"></div>
     <div class="flowers">
