--- a/flower.html
+++ b/flower.html
@@ -9,8 +9,12 @@
     <title>Gift - Benhard</title>
 </head>
 <body class="container">  
+      <div> <audio autoplay controls loop>
+      <source src="music.mp3" type="audio/mpeg">
+    </audio>
     <div class="message-container">
       <p>nii buat kamuu :b </p>
+    </div>
     </div>
     <div class="night"></div>
     <div class="flowers">
@@ -518,8 +522,5 @@
       </div>
     </div>
     <script src="main.js"></script>
-    <audio autoplay controls loop>
-      <source src="music.mp3" type="audio/mpeg">
-    </audio>
   </body>
 </html>
