--- a/flower.html
+++ b/flower.html
@@ -9,12 +9,8 @@
     <title>Gift - Benhard</title>
 </head>
 <body class="container">  
-      <div> <audio autoplay controls loop>
-      <source src="music.mp3" type="audio/mpeg">
-    </audio>
     <div class="message-container">
-      <p>nii buat kamuu :b </p>
-    </div>
+      <p>nii buang buat kmuu :b </p>
     </div>
     <div class="night"></div>
     <div class="flowers">
@@ -522,5 +518,8 @@
       </div>
     </div>
     <script src="main.js"></script>
+    <audio autoplay controls loop>
+      <source src="music.mp3" type="audio/mpeg">
+    </audio>
   </body>
 </html>
