--- a/flower.html
+++ b/flower.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">  
     <div class="message-container">
-      <p>nii buang buat kmuu :b </p>
+      <p>nii bunga buat kmuu :b </p>
     </div>
     <div class="night"></div>
     <div class="flowers">
