--- a/flower.html
+++ b/flower.html
@@ -9,7 +9,7 @@
     <title>Gift - Benhard</title>
 </head>
 <body class="container">  
-    <div class="message-container">
+    <div class="-container">
       <p>nii bunga buat kmuu :b </p>
     </div>
     <div class="night"></div>
