--- a/flower.html
+++ b/flower.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" href="flowers.png" type="image/x-icon">
     <title>Gift - Benhard</title>
 </head>
 <body class="container">  
+    <div class="sparkles"></div>  
     <div class="-container">
-      <p>nii bunga buat kmuu :b</p><h2>everything u are</h2>
+      <p>nii bunga buat kmuu :b</p>
     </div>
     <div class="night"></div>
     <div class="flowers">
