--- a/flower.html
+++ b/flower.html
@@ -10,9 +10,13 @@
     <title>Gift - Benhard</title>
 </head>
 <body class="container">  
-    <div class="sparkles"></div>  
+    <div class="sparkles"></div>
+    <div class="stars"></div>
+    <div class="aurora"></div>
+    <div class="floating-hearts"></div>
     <div class="-container">
-      <p>nii bunga buat kmuu :b</p>
+      <p class="glow-text">nii bunga buat kmuu ✨</p>
+      <p class="subtitle">setiap kelopaknya adalah cinta yang tumbuh untukmu</p>
     </div>
     <div class="night"></div>
     <div class="flowers">
