--- a/flower.html
+++ b/flower.html
@@ -15,7 +15,7 @@
     <div class="aurora"></div>
     <div class="floating-hearts"></div>
     <div class="-container">
-      <p class="glow-text">nii bunga buat kmuu ✨</p>
+      <p class="glow-text">nii bunga buat kmuu :b </p>
       <p class="subtitle">setiap kelopaknya adalah cinta yang tumbuh untukmu</p>
     </div>
     <div class="night"></div>
