--- a/flower.html
+++ b/flower.html
@@ -311,5 +311,5 @@
 </html>
 
 <audio autoplay controls loop>
-  <source src="music/music.mp3" type="audio/mpeg">
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
