--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <span>A</span>
         <span>R</span>
         <span>A</span>
+        <span>A</span>
+        <span>!</span>
+    
     </div>
     <div class="description">
         <span>Semangat Ya Jadi Panitia Ospeknya</span>
