--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <span>A</span>
         <span>L</span>
         <span>O</span>
+        <span> </span>
         <span>C</span>
         <span>L</span>
         <span>A</span>
         <span>R</span>
-        <span>A</span>
         <span>A</span>
         <span>!</span>
     
