--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span>A</span>
         <span>L</span>
         <span>O</span>
-        <span> </span>
+        <span>O</span>
         <span>C</span>
         <span>L</span>
         <span>A</span>
