--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
-    <title>Ini kado buat kmuu !! </3></title>
+    <title>Ini kado buat cg ! </3></title>
 </head>
 <body>
     <div class="greetings">
@@ -16,16 +16,23 @@
         <span>L</span>
         <span>O</span>
         <span>O</span>
-        <span>C</span>
-        <span>L</span>
-        <span>A</span>
-        <span>R</span>
+        <span>S</span>
+        <span>E</span>
+        <span>M</span>
+        <span>U</span>
         <span>A</span>
         <span>!</span>
     
     </div>
     <div class="description">
-        <span>Semangat Ya Jadi Panitia Ospeknya</span>
+        <span>Semangat WOI</span>
+        <span>Yang Skripsi</span>
+        <span>Yang Kerja</span>
+        <span>Yang Sekolah</span>
+        <span>atau lain lain.</span>
+    </div>
+    <div class="image-container">
+        <img src="cg4.jpg" alt="Beautiful Image" class="featured-image">
     </div>
     <div class="button">
         <button>
