--- a/flower.html
+++ b/flower.html
@@ -8,9 +8,14 @@
     <link rel="icon" href="flowers.png" type="image/x-icon">
     <title>Kado buat kamu</title>
 </head>
-<body class="container">  
-    <div class="night"></div>
-    <div class="flowers">
+<body class="container">
+  <div class="night"></div>
+  <div class="stars"></div>
+  <div class="romantic-message">Kamu adalah bintang di malam hari, Clara! ✨💖</div>
+  <div class="image-gallery">
+      <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image">
+  </div>
+  <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
