--- a/flower.html
+++ b/flower.html
@@ -14,6 +14,10 @@
   <div class="romantic-message">Kamu adalah bintang di malam hari, Clara! ✨💖</div>
   <div class="image-gallery">
       <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image">
+      <img src="cg4(2).jpg" alt="Beautiful Memory 2" class="gallery-image">
+      <img src="cg4(3).jpg" alt="Beautiful Memory 3" class="gallery-image">
+      <img src="cg4(4).jpg" alt="Beautiful Memory 4" class="gallery-image">
+      <img src="cg4(5).jpg" alt="Beautiful Memory 5" class="gallery-image">
   </div>
   <div class="flowers">
       <div class="flower flower--1">
