--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     
     </div>
     <div class="description">
-        <span>Semangat WOI</span>
-        <span>Yang Skripsi</span>
-        <span>Yang Kerja</span>
-        <span>Yang Sekolah</span>
-        <span>atau lain lain.</span>
+        <ul>
+            <li>Semangat WOI</li>
+            <li>Yang Skripsi</li>
+            <li>Yang Kerja</li>
+            <li>Yang Sekolah</li>
+            <li>atau lain lain.</li>
+        </ul>
     </div>
     <div class="button">
         <button>
