--- a/flower.html
+++ b/flower.html
@@ -11,8 +11,10 @@
 <body class="container">
   <div class="night"></div>
   <div class="stars"></div>
-  <div class="romantic-message"> Kolose 2:7 ✨💖</div>
-  <div class="romantic-message"> "Hendaklah kamu berakar di dalam Dia dan dibangun di atas Dia, hendaklah kamu bertambah teguh dalam iman yang telah diajarkan kepadamu, dan hendaklah hatimu melimpah dengan syukur." ✨💖</div>
+  <div class="romantic-message-container">
+    <div class="verse-reference">Kolose 2:7 ✨💖</div>
+    <div class="verse-content">"Hendaklah kamu berakar di dalam Dia dan dibangun di atas Dia, hendaklah kamu bertambah teguh dalam iman yang telah diajarkan kepadamu, dan hendaklah hatimu melimpah dengan syukur." ✨💖</div>
+  </div>
 
   <div class="image-gallery left">
       <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image" data-text="Kenangan indah bersama kamu">
@@ -22,6 +24,7 @@
   <div class="image-gallery right">
       <img src="cg4(4).jpg" alt="Beautiful Memory 4" class="gallery-image" data-text="Waktu yang berharga bersama">
       <img src="cg4(5).jpg" alt="Beautiful Memory 5" class="gallery-image" data-text="Cinta yang selalu berkembang">
+      <img src="cg4(6).jpg" alt="Beautiful Memory 6" class="gallery-image" data-text="Kenangan yang selalu di hati">
   </div>
 
   <!-- Modal for zoomed images -->
