--- a/flower.html
+++ b/flower.html
@@ -17,13 +17,13 @@
   </div>
 
   <div class="image-gallery left">
-      <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image" data-text="Kenangan indah bersama kamu">
+      <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image" data-text="Kenangan indah bersama kita">
       <img src="cg4(2).jpg" alt="Beautiful Memory 2" class="gallery-image" data-text="Momen spesial yang tak terlupakan">
-      <img src="cg4(3).jpg" alt="Beautiful Memory 3" class="gallery-image" data-text="Senyuman yang selalu membuatku bahagia">
+      <img src="cg4(3).jpg" alt="Beautiful Memory 3" class="gallery-image" data-text="Candaan yang selalu membuat bahagia">
   </div>
   <div class="image-gallery right">
       <img src="cg4(4).jpg" alt="Beautiful Memory 4" class="gallery-image" data-text="Waktu yang berharga bersama">
-      <img src="cg4(5).jpg" alt="Beautiful Memory 5" class="gallery-image" data-text="Cinta yang selalu berkembang">
+      <img src="cg4(5).jpg" alt="Beautiful Memory 5" class="gallery-image" data-text="Kasih yang selalu berkembang">
       <img src="cg4(6).jpg" alt="Beautiful Memory 6" class="gallery-image" data-text="Kenangan yang selalu di hati">
   </div>
 
