--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="description">
         <ul>
-            <span>Semangat WOI</span>
+            <span>Semangat WOII !</span>
             <li>Yang Skripsi</li>
             <li>Yang Kerja</li>
             <li>Yang Sekolah</li>
