--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
         <span>L</span>
@@ -22,7 +22,12 @@
         <span>U</span>
         <span>A</span>
         <span>!</span>
-    
+
+    </div>
+    <div class="greetings cg4">
+        <span>C</span>
+        <span>G</span>
+        <span>4</span>
     </div>
     <div class="description">
         <ul>
