--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <span>C</span>
         <span>G</span>
         <span>4</span>
+        <span>🖖</span>
     </div>
     <div class="description">
         <ul>
