--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <div class="greetings cg4">
         <span>C</span>
         <span>G</span>
+        <span>-</span>
         <span>4</span>
-        <span>🖖</span>
+        <span>!</span>  
     </div>
     <div class="description">
         <ul>
