--- a/flower.html
+++ b/flower.html
@@ -17,14 +17,14 @@
   </div>
 
   <div class="image-gallery left">
-      <img src="cg4.jpg" alt="Beautiful Memory" class="gallery-image" data-text="Kenangan indah bersama kita">
-      <img src="cg4(2).jpg" alt="Beautiful Memory 2" class="gallery-image" data-text="Momen spesial yang tak terlupakan">
-      <img src="cg4(3).jpg" alt="Beautiful Memory 3" class="gallery-image" data-text="Candaan yang selalu membuat bahagia">
+      <img src="cg4.jpg" alt="Keluaran 9:16" class="gallery-image" data-text="akan tetapi inilah sebabnya Aku membiarkan engkau hidup, yakni supaya memperlihatkan kepadamu kekuatan-Ku, dan supaya nama-Ku dimasyhurkan di seluruh bumi.">
+      <img src="cg4(2).jpg" alt="Matius 6:33" class="gallery-image" data-text="Tetapi carilah dahulu Kerajaan Allah dan kebenarannya, maka semuanya itu akan ditambahkan kepadamu.">
+      <img src="cg4(3).jpg" alt="Yohanes 3:15" class="gallery-image" data-text="supaya setiap orang yang percaya kepada-Nya beroleh hidup yang kekal.">
   </div>
   <div class="image-gallery right">
-      <img src="cg4(4).jpg" alt="Beautiful Memory 4" class="gallery-image" data-text="Waktu yang berharga bersama">
-      <img src="cg4(5).jpg" alt="Beautiful Memory 5" class="gallery-image" data-text="Kasih yang selalu berkembang">
-      <img src="cg4(6).jpg" alt="Beautiful Memory 6" class="gallery-image" data-text="Kenangan yang selalu di hati">
+      <img src="cg4(4).jpg" alt="Efesus 5:16" class="gallery-image" data-text="dan pergunakanlah waktu yang ada, karena hari-hari ini adalah jahat.">
+      <img src="cg4(5).jpg" alt="Habakuk 2:14" class="gallery-image" data-text="Sebab bumi akan penuh dengan pengetahuan tentang kemuliaan TUHAN, seperti air yang menutupi dasar laut.">
+      <img src="cg4(6).jpg" alt="Wahyu 2:26" class="gallery-image" data-text="Dan barangsiapa menang dan melakukan pekerjaan-Ku sampai pada kesudahannya, kepadanya akan Kukaruniakan kuasa atas bangsa-bangsa;">
   </div>
 
   <!-- Modal for zoomed images -->
