--- a/flower.html
+++ b/flower.html
@@ -19,12 +19,12 @@
   <div class="image-gallery left">
       <img src="cg4.jpg" alt="Keluaran 9:16" class="gallery-image" data-text="Keluaran 9:16 - Akan tetapi inilah sebabnya Aku membiarkan engkau hidup, yakni supaya memperlihatkan kepadamu kekuatan-Ku, dan supaya nama-Ku dimasyhurkan di seluruh bumi.">
       <img src="cg4(2).jpg" alt="Matius 6:33" class="gallery-image" data-text="Habakuk 2:14 - Sebab bumi akan penuh dengan pengetahuan tentang kemuliaan TUHAN, seperti air yang menutupi dasar laut.">
-      <img src="cg4(3).jpg" alt="Yohanes 3:15" class="gallery-image" data-text="Efesus 5:16 - Dan pergunakanlah waktu yang ada, karena hari-hari ini adalah jahat.">
+      <img src="cg4(3).jpg" alt="Yohanes 3:15" class="gallery-image" data-text="Wahyu 2:26 - Dan barangsiapa menang dan melakukan pekerjaan-Ku sampai pada kesudahannya, kepadanya akan Kukaruniakan kuasa atas bangsa-bangsa;">
   </div>
   <div class="image-gallery right">
       <img src="cg4(4).jpg" alt="Efesus 5:16" class="gallery-image" data-text="Yohanes 3:15 - Supaya setiap orang yang percaya kepada-Nya beroleh hidup yang kekal.">
       <img src="cg4(5).jpg" alt="Habakuk 2:14" class="gallery-image" data-text="Habakuk 2:14 - Sebab bumi akan penuh dengan pengetahuan tentang kemuliaan TUHAN, seperti air yang menutupi dasar laut.">
-      <img src="cg4(6).jpg" alt="Wahyu 2:26" class="gallery-image" data-text="Wahyu 2:26 - Dan barangsiapa menang dan melakukan pekerjaan-Ku sampai pada kesudahannya, kepadanya akan Kukaruniakan kuasa atas bangsa-bangsa;">
+      <img src="cg4(6).jpg" alt="Wahyu 2:26" class="gallery-image" data-text="Efesus 5:16 - Dan pergunakanlah waktu yang ada, karena hari-hari ini adalah jahat.">
   </div>
 
   <!-- Modal for zoomed images -->
