--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <span>M</span>
         <span>U</span>
         <span>A</span>
+        <span>A</span>
         <span>!</span>
 
     </div>
@@ -33,8 +34,9 @@
     </div>
     <div class="description">
         <ul>
-            <span>Semangat WOII !</span>
+            <span>Semangat GUYSSS !!</span>
             <li>Yang Skripsi</li>
+            <li>Yang Kuliah</li>
             <li>Yang Kerja</li>
             <li>Yang Sekolah</li>
             <li>atau lain lain.</li>
