--- a/flower.html
+++ b/flower.html
@@ -10,6 +10,20 @@
 </head>
 <body class="container">
   <div class="night"></div>
+   <div class="stars"></div>
+   <div class="twinkling-elements">
+       <div class="star star--1">⭐</div>
+       <div class="star star--2">⭐</div>
+       <div class="star star--3">⭐</div>
+       <div class="star star--4">⭐</div>
+       <div class="star star--5">⭐</div>
+       <div class="love love--1">❤️</div>
+       <div class="love love--2">❤️</div>
+       <div class="love love--3">❤️</div>
+       <div class="love love--4">❤️</div>
+       <div class="love love--5">❤️</div>
+   </div>
+   <div class="twinkling-elements"></div>
   <div class="stars"></div>
   <div class="romantic-message-container">
     <div class="verse-reference">Kolose 2:7 ✨💖</div>
@@ -590,7 +604,3 @@
     <script src="main.js"></script>
   </body>
 </html>
-
-<audio autoplay controls loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
