--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
         
     </div>
     <script src="main.js"></script>
+    <audio autoplay controls loop>
+        <source src="cg4.mp3" type="audio/mpeg">
+    </audio>
+</body>
+</html>
+    <script src="main.js"></script>
 </body>
 </html>
