--- a/flower.html
+++ b/flower.html
@@ -604,3 +604,7 @@
     <script src="main.js"></script>
   </body>
 </html>
+
+<audio autoplay controls loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
