--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <span>L</span>
         <span>O</span>
         <span>O</span>
-        <span>S</span>
-        <span>E</span>
-        <span>M</span>
+        <span> </span>
+        <span>G</span>
         <span>U</span>
-        <span>A</span>
-        <span>A</span>
+        <span>Y</span>
+        <span>S</span>
+        <span>S</span>
         <span>!</span>
 
     </div>
