--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <span>L</span>
         <span>O</span>
         <span>O</span>
-        <span> </span>
         <span>G</span>
-        <span>U</span>
-        <span>Y</span>
-        <span>S</span>
+        <span>E</span>
+        <span>N</span>
+        <span>G</span>
         <span>S</span>
         <span>!</span>
 
