--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
     </div>
     <script src="main.js"></script>
-    <audio autoplay controls loop>
+    <audio autoplay loop>
       <source src="cg4.mp3" type="audio/mpeg">
     </audio>
 </body>
