--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
         </button>
         
     </div>
+
+    <!-- Arrows pointing to button -->
+    <div class="arrows-container">
+        <div class="arrow arrow--top">⬆</div>
+        <div class="arrow arrow--left">⬅</div>
+        <div class="arrow arrow--right">➡</div>
+        <div class="arrow arrow--bottom">⬇</div>
+    </div>
+
+    <script src="main.js"></script>
+    </div>
     <script src="main.js"></script>
     <audio autoplay loop>
       <source src="cg4.mp3" type="audio/mpeg">
