--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Arrows pointing to button -->
     <div class="arrows-container">
-        <div class="arrow arrow--top">⬆</div>
+        <div class="arrow arrow--bottom">⬆</div>
     </div>
 
     <script src="main.js"></script>
