Add inline styles to force flower visibility

--- a/flower.html
+++ b/flower.html
@@ -59,7 +59,7 @@
     <img class="modal-content" id="modalImage">
     <div id="imageText" class="modal-text"></div>
   </div>
-  <div class="flowers">
+  <div class="flowers" style="display: block !important; visibility: visible !important; opacity: 1 !important;">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
