--- a/flower.html
+++ b/flower.html
@@ -60,6 +60,12 @@
     <div id="imageText" class="modal-text"></div>
   </div>
   <div class="flowers" style="display: block !important; visibility: visible !important; opacity: 1 !important;">
+      <!-- Simple static flowers for testing -->
+      <div style="position: absolute; bottom: 50px; left: 20%; width: 50px; height: 50px; background: pink; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
+      <div style="position: absolute; bottom: 50px; left: 40%; width: 50px; height: 50px; background: lightblue; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
+      <div style="position: absolute; bottom: 50px; left: 60%; width: 50px; height: 50px; background: lightgreen; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
+      <div style="position: absolute; bottom: 50px; left: 80%; width: 50px; height: 50px; background: yellow; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
+
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
