--- a/flower.html
+++ b/flower.html
@@ -620,10 +620,9 @@
         </div>
       </div>
     </div>
+    <audio controls loop>
+      <source src="music.mp3" type="audio/mpeg">
+    </audio>
     <script src="main.js"></script>
   </body>
 </html>
-
-<audio autoplay controls loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
