--- a/flower.html
+++ b/flower.html
@@ -10,20 +10,6 @@
 </head>
 <body class="container">
   <div class="night"></div>
-   <div class="stars"></div>
-   <div class="twinkling-elements">
-       <div class="star star--1">⭐</div>
-       <div class="star star--2">⭐</div>
-       <div class="star star--3">⭐</div>
-       <div class="star star--4">⭐</div>
-       <div class="star star--5">⭐</div>
-       <div class="love love--1">❤️</div>
-       <div class="love love--2">❤️</div>
-       <div class="love love--3">❤️</div>
-       <div class="love love--4">❤️</div>
-       <div class="love love--5">❤️</div>
-   </div>
-   <div class="twinkling-elements"></div>
   <div class="stars"></div>
   <div class="romantic-message-container">
     <div class="verse-reference">Kolose 2:7 ✨💖</div>
@@ -59,26 +45,7 @@
     <img class="modal-content" id="modalImage">
     <div id="imageText" class="modal-text"></div>
   </div>
-  <div class="flowers" style="display: block !important; visibility: visible !important; opacity: 1 !important;">
-      <!-- Simple visible flowers -->
-      <div style="position: absolute; bottom: 100px; left: 10%; width: 80px; height: 120px; background: linear-gradient(to top, #54b8aa, #a7ffee); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
-      <div style="position: absolute; bottom: 80px; left: 30%; width: 60px; height: 100px; background: linear-gradient(to top, #ff6b9d, #ffb3ba); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
-      <div style="position: absolute; bottom: 120px; left: 50%; width: 70px; height: 110px; background: linear-gradient(to top, #dda0dd, #98d8c8); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
-      <div style="position: absolute; bottom: 90px; left: 70%; width: 65px; height: 105px; background: linear-gradient(to top, #ffeaa7, #f7dc6f); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
-
-      <!-- Simple stems -->
-      <div style="position: absolute; bottom: 0; left: 10%; width: 4px; height: 100px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
-      <div style="position: absolute; bottom: 0; left: 30%; width: 4px; height: 80px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
-      <div style="position: absolute; bottom: 0; left: 50%; width: 4px; height: 120px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
-      <div style="position: absolute; bottom: 0; left: 70%; width: 4px; height: 90px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
-
-      <!-- Simple grass -->
-      <div style="position: absolute; bottom: 0; left: 5%; width: 20px; height: 60px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
-      <div style="position: absolute; bottom: 0; left: 25%; width: 18px; height: 55px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
-      <div style="position: absolute; bottom: 0; left: 45%; width: 22px; height: 65px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
-      <div style="position: absolute; bottom: 0; left: 65%; width: 19px; height: 58px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
-      <div style="position: absolute; bottom: 0; left: 85%; width: 21px; height: 62px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
-
+  <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
@@ -373,256 +340,11 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-
-      <!-- Additional decorative flowers -->
-      <div class="flower flower--4">
-        <div class="flower__leafs flower__leafs--4">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
-          <div class="flower__light flower__light--3"></div>
-          <div class="flower__light flower__light--4"></div>
-          <div class="flower__light flower__light--5"></div>
-          <div class="flower__light flower__light--6"></div>
-          <div class="flower__light flower__light--7"></div>
-          <div class="flower__light flower__light--8"></div>
-        </div>
-        <div class="flower__line">
-          <div class="flower__line__leaf flower__line__leaf--1"></div>
-          <div class="flower__line__leaf flower__line__leaf--2"></div>
-          <div class="flower__line__leaf flower__line__leaf--3"></div>
-          <div class="flower__line__leaf flower__line__leaf--4"></div>
-        </div>
-      </div>
-
-      <div class="flower flower--5">
-        <div class="flower__leafs flower__leafs--5">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
-          <div class="flower__light flower__light--3"></div>
-          <div class="flower__light flower__light--4"></div>
-          <div class="flower__light flower__light--5"></div>
-          <div class="flower__light flower__light--6"></div>
-          <div class="flower__light flower__light--7"></div>
-          <div class="flower__light flower__light--8"></div>
-        </div>
-        <div class="flower__line">
-          <div class="flower__line__leaf flower__line__leaf--1"></div>
-          <div class="flower__line__leaf flower__line__leaf--2"></div>
-          <div class="flower__line__leaf flower__line__leaf--3"></div>
-          <div class="flower__line__leaf flower__line__leaf--4"></div>
-          <div class="flower__line__leaf flower__line__leaf--5"></div>
-          <div class="flower__line__leaf flower__line__leaf--6"></div>
-        </div>
-      </div>
-
-      <!-- More beautiful flowers -->
-      <div class="flower flower--6">
-        <div class="flower__leafs flower__leafs--6">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
-          <div class="flower__light flower__light--3"></div>
-          <div class="flower__light flower__light--4"></div>
-          <div class="flower__light flower__light--5"></div>
-          <div class="flower__light flower__light--6"></div>
-          <div class="flower__light flower__light--7"></div>
-          <div class="flower__light flower__light--8"></div>
-        </div>
-        <div class="flower__line">
-          <div class="flower__line__leaf flower__line__leaf--1"></div>
-          <div class="flower__line__leaf flower__line__leaf--2"></div>
-          <div class="flower__line__leaf flower__line__leaf--3"></div>
-          <div class="flower__line__leaf flower__line__leaf--4"></div>
-          <div class="flower__line__leaf flower__line__leaf--5"></div>
-          <div class="flower__line__leaf flower__line__leaf--6"></div>
-        </div>
-      </div>
-
-      <div class="flower flower--7">
-        <div class="flower__leafs flower__leafs--7">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
-          <div class="flower__light flower__light--3"></div>
-          <div class="flower__light flower__light--4"></div>
-          <div class="flower__light flower__light--5"></div>
-          <div class="flower__light flower__light--6"></div>
-          <div class="flower__light flower__light--7"></div>
-          <div class="flower__light flower__light--8"></div>
-        </div>
-        <div class="flower__line">
-          <div class="flower__line__leaf flower__line__leaf--1"></div>
-          <div class="flower__line__leaf flower__line__leaf--2"></div>
-          <div class="flower__line__leaf flower__line__leaf--3"></div>
-          <div class="flower__line__leaf flower__line__leaf--4"></div>
-        </div>
-      </div>
-
-      <div class="flower flower--8">
-        <div class="flower__leafs flower__leafs--8">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
-          <div class="flower__light flower__light--3"></div>
-          <div class="flower__light flower__light--4"></div>
-          <div class="flower__light flower__light--5"></div>
-          <div class="flower__light flower__light--6"></div>
-          <div class="flower__light flower__light--7"></div>
-          <div class="flower__light flower__light--8"></div>
-        </div>
-        <div class="flower__line">
-          <div class="flower__line__leaf flower__line__leaf--1"></div>
-          <div class="flower__line__leaf flower__line__leaf--2"></div>
-          <div class="flower__line__leaf flower__line__leaf--3"></div>
-          <div class="flower__line__leaf flower__line__leaf--4"></div>
-          <div class="flower__line__leaf flower__line__leaf--5"></div>
-          <div class="flower__line__leaf flower__line__leaf--6"></div>
-        </div>
-      </div>
-
-      <!-- Additional decorative grass -->
-      <div class="growing-grass">
-        <div class="flower__grass flower__grass--3">
-          <div class="flower__grass--top"></div>
-          <div class="flower__grass--bottom"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--1"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--2"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--3"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--4"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--5"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--6"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--7"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--8"></div>
-          <div class="flower__grass__overlay"></div>
-        </div>
-      </div>
-
-      <div class="growing-grass">
-        <div class="flower__grass flower__grass--4">
-          <div class="flower__grass--top"></div>
-          <div class="flower__grass--bottom"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--1"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--2"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--3"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--4"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--5"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--6"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--7"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--8"></div>
-          <div class="flower__grass__overlay"></div>
-        </div>
-      </div>
-
-      <!-- More grass clusters for density -->
-      <div class="growing-grass">
-        <div class="flower__grass flower__grass--5">
-          <div class="flower__grass--top"></div>
-          <div class="flower__grass--bottom"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--1"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--2"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--3"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--4"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--5"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--6"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--7"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--8"></div>
-          <div class="flower__grass__overlay"></div>
-        </div>
-      </div>
-
-      <div class="growing-grass">
-        <div class="flower__grass flower__grass--6">
-          <div class="flower__grass--top"></div>
-          <div class="flower__grass--bottom"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--1"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--2"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--3"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--4"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--5"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--6"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--7"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--8"></div>
-          <div class="flower__grass__overlay"></div>
-        </div>
-      </div>
-
-      <div class="growing-grass">
-        <div class="flower__grass flower__grass--7">
-          <div class="flower__grass--top"></div>
-          <div class="flower__grass--bottom"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--1"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--2"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--3"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--4"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--5"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--6"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--7"></div>
-          <div class="flower__grass__leaf flower__grass__leaf--8"></div>
-          <div class="flower__grass__overlay"></div>
-        </div>
-      </div>
-
-      <!-- Additional long grass elements -->
-      <div class="long-g long-g--8">
-        <div class="grow-ans" style="--d:4.2s">
-          <div class="leaf leaf--0"></div>
-        </div>
-        <div class="grow-ans" style="--d:4.4s">
-          <div class="leaf leaf--1"></div>
-        </div>
-        <div class="grow-ans" style="--d:4.6s">
-          <div class="leaf leaf--2"></div>
-        </div>
-        <div class="grow-ans" style="--d:4.8s">
-          <div class="leaf leaf--3"></div>
-        </div>
-      </div>
-
-      <div class="long-g long-g--9">
-        <div class="grow-ans" style="--d:4.5s">
-          <div class="leaf leaf--0"></div>
-        </div>
-        <div class="grow-ans" style="--d:4.7s">
-          <div class="leaf leaf--1"></div>
-        </div>
-        <div class="grow-ans" style="--d:4.9s">
-          <div class="leaf leaf--2"></div>
-        </div>
-        <div class="grow-ans" style="--d:5.1s">
-          <div class="leaf leaf--3"></div>
-        </div>
-      </div>
     </div>
-    <audio controls loop>
-      <source src="music.mp3" type="audio/mpeg">
-    </audio>
     <script src="main.js"></script>
   </body>
 </html>
+
+<audio autoplay controls loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
